# LainExBot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.py  errors.py  handlers.py  main.py  managers.py  models.py  pyproject.toml  render.yaml  requirements.txt  utils.py
tests/: test_handlers.py  test_managers.py  test_models.py  test_utils.py
